assets/css/newtask.css
body {
  background: #e9e9e9;
  color: #666666;
  font-family: 'RobotoDraft', 'Roboto', sans-serif;
}

img{
  margin-left: 425px;
  padding-bottom: 30px;
}

#navbar{
  border-top-style: solid;
  border-top-width: 2px;
  border-top-color: #8F8E8E;
  
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-bottom-color: #8F8E8E;

  padding-top: 15px;
  padding-bottom: 15px;
}

#contentbox{
  margin-top: 40px;
}

#task-form{
  padding-left:15px;
  padding-right:15px;
  padding-top: 5px;
}

.breadcrumb{
  margin-bottom: 0px;
  background-color: inherit;
  font-size: 10px;
  margin-left: 5px;
  border-style: none;
}

.breadcrumb>li+li:before{
  content: none;
}

#second-link, #third-link{
  margin-left: 115px;
}

a{
  color: #ed2553;
  font-size: 28px;
  margin-left: 10px;
}

a:visited, a:hover, a:focus {
  color: #ed2553;
  text-decoration: none;
}

.btn-default{
  background: white;
  border: 2px #ed2553 solid;
  border-radius: 15px 50px;
  padding: 15px;
  margin:15px 0 0 15px;
  font-size: 15px;
  font-weight: 400;
}

table.table p.generalInfo {
  line-height: 1;
}

.btn-default > a.btn-primary-text:hover {
  background: none;
}
.btn-default:hover, .btn-default:active, .btn-default:focus  {
  background: white !important;
  border: 4px #ed2553 solid !important;
}
.btn-primary-text{
  font-size: 15px !important;
  font-weight: 400 !important;
}

/*Media Queries*/
@media(min-width:600px) and (max-width:749px){
  #first-link { margin-left:55px; }
  #second-link{ margin-left: 95px; }
  #third-link{ margin-left: 95px; }
  #first-link, #second-link, #third-link{
  font-size: 20px;}
  img{margin-left:-40px;})
}

@media(min-width:750px) and (max-width:992px) {
  #first-link { margin-left:20px; }
  #second-link{ margin-left: 80px; }
  #third-link{ margin-left:80px; }
  #welcomeHeader{font-size: 105px;})
}

@media(min-width:993px) and (max-width:1199px){
  #first-link { margin-left:-6px; }
  #second-link{ margin-left: 60px; }
  #third-link{ margin-left:60px; }
  #welcomeHeader{font-size: 115px;})
}

@media(min-width:1200px) and (max-width:1439px){
  #first-link { margin-left:15px; }
  #second-link{ margin-left: 105px; }
  #third-link{ margin-left:105px; }
  #welcomeHeader{font-size: 125px;})
}
 

